--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :body %><br>
-    <%= raw f.text_area :body, :rows => 15 %>
+    <%= f.bootsy_area :body, :rows => 15 %>
   </div>
   <div class="field">
     <%= f.file_field :image %>
