--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,32 +1,13 @@
-<%= form_for @post, html: { multipart: true } do |f| %>
-  <% if @post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
+<%= form_for @post do |f| %>
 
-      <ul>
-      <% @post.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :title %><br>
+    <%= f.label :title %>
     <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :byline %><br>
+
+    <%= f.label :byline %>
     <%= f.text_field :byline %>
-  </div>
-  <div class="field">
-    <%= f.label :body %><br>
-    <%= f.bootsy_area :body, :rows => 15 %>
-  </div>
-  <div class="field">
-    <%= f.file_field :image %>
-  </div>
-  <div class="actions">
+
+    <%= f.label :body %>
+    <%= f.bootsy_area :body %>
+
     <%= f.submit %>
-  </div>
 <% end %>
