wysiwyg icons working in asset pipeline

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require_tree .
  *= require fancybox
  *= require font-awesome
- *= require_self
  *= require bootsy
- *= require bootstrap.min
+ *= require bootstrap
+ *= require_self
  */
