--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,9 @@
 <%= provide(:title, "Blog") %>
 <div class="blog-container">
 	<% if signed_in? %>
-		<%= link_to 'New Post', new_post_path, class: "new-post-button" %>
+		<div class="button-container">
+			<%= link_to 'New Post', new_post_path, class: "new-post-button" %>
+		</div>
 	<% end %>
 	<% @posts.each do |post| %>
 	  <h2 class="title">
