--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -7,7 +7,7 @@ div.blog-container {
 	margin: 50px 10%;
 	h2.title {
 		border-top: 1px solid $pink;
-		padding-top: 20px;
+		padding-top: 40px;
 		font-weight: 300;
 		font-size: 4em;
 		a.index-title-link {
@@ -35,10 +35,29 @@ div.blog-container {
 		margin-left: 220px;
 	}
 	.post-body {
-		margin-top: 60px;
+		margin-top: 10px;
 		font-size: 1.7em;
 		font-weight: 300;
 		line-height: 1.8em;
+	}
+	p {
+		margin-top: 10px;
+		font-size: 1.7em;
+		font-weight: 300;
+		line-height: 1.8em;
+	}
+	i {
+		font-size: 1.1em;
+	}
+	h3 {
+		font-size: 1.7em;
+	}
+	img:first-child {
+		visibility: hidden;
+	}
+	img {
+		display: block;
+		border: 18px solid #FFF8DC;
 	}
 }
 
@@ -66,12 +85,15 @@ ul.user-links {
 	li {
 		display: inline-block;
 		margin: 5px;
+		font-size: 1.5em;
 	}
 }
 
 a.user-link {
 	color: black;
 	text-decoration: none;
+	margin: 25px;
+	padding-bottom: 30px;
 }
 a.user-link:hover {
 	text-decoration: underline;
@@ -79,8 +101,11 @@ a.user-link:hover {
 
 
 div.comments-container {
+	margin-top: 100px;
 	h3 {
 		font-size: 3em;
+		margin-bottom: 40px;
+		display: block;
 	}
 	p.commenter {
 		padding-bottom: 20px;
@@ -101,6 +126,7 @@ div.comments-container {
 div.comment-form-container {
 	border-top: 1px dotted black;
 	margin-top: 20px;
+	padding-top: 50px;
 	text-align: center;
 	ul.comment-form {
 		width: 200px;
@@ -154,13 +180,17 @@ input#button:hover {
 }
 
 div.blog-post {
-	background-color: lightgrey;
 	width: 80%;
 	height: 900px;
 	margin: 0 auto;
 	div.field {
 
 	}
+}
+
+.bootsy_text_area {
+	width: 100%;
+	height: 700px;
 }
 
 *:focus {
